fix text align.

--- a/src/style/_container.scss
+++ b/src/style/_container.scss
@@ -32,7 +32,7 @@
       color: $primary-color;
     }
   }
-  center-text {
+  .center-text {
     text-align: center;
   }
 }
